--- a/tests/test.html
+++ b/tests/test.html
@@ -8,11 +8,9 @@
 <body>
     <script src="./underscore.js"></script>
     <script>
-        var newFunc = restArguments(function(a,b){
-            console.log(a)
-        },2);
-        
-        newFunc(1);
+        var o = 11;
+        var n = 11;
+        console.log(isEqual(o,n));
     </script>
 </body>
 
