--- a/tests/test.html
+++ b/tests/test.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-    <script src="./underscore.js"></script>
+    <script src="../underscore.js"></script>
     <script>
-        var o = 11;
-        var n = 11;
-        console.log(isEqual(o,n));
+        console.log(_.map([1, 2, 3], function (item) {
+            return item + 1;
+        },{obj:"xufeng"}))
     </script>
 </body>
 
